styles.css
/* General Styles */
body {
  font-family: "Arial", sans-serif;
  margin: 0;
  padding: 0;
}

body::-webkit-scrollbar {
  width: 12px; /* Set the width of the scrollbar */
}

body::-webkit-scrollbar-track {
  background-color: #fff; /* Set the background color of the scrollbar track */
}

body::-webkit-scrollbar-thumb {
  background-color: #d63031; /* Set the color of the scrollbar thumb */
  border-radius: 6px; /* Set the border radius of the scrollbar thumb */
}

body::-webkit-scrollbar-thumb:hover {
  background-color: #bb0f0f; /* Set the color of the scrollbar thumb */ /* Set the color of the scrollbar thumb on hover */
}

/* Header Styles */
header {
  background-color: #74b9ff;
  color: #fff;
  text-align: center;
  padding: 1em 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.header-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-right: 20px; /* Add margin for spacing */
}

.header-text {
  text-align: center;
}

.header_H1,
.header_P {
  margin: 0;
  text-shadow: 2% 2% 4% rgba(0, 0, 0, 0.3);
}

.profile-image {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  margin-top: 10px;
  margin-left: 20px; /* Add margin for spacing */
}

/* Navigation Styles */
nav {
  background-color: #0984e3;
}

nav ul {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  justify-content: space-around;
}

nav a {
  text-decoration: none;
  color: #fff;
  padding: 1em;
  transition: color 0.3s ease;
}

nav a:hover {
  color: #2d3436;
}

/* Section Styles */
section {
  padding: 2em;
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  margin-top: 20px;
}

/* About Me Section Styles */
section.about-section {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

/* Expertise Section Styles */
#expertise {
  text-align: center;
  padding: 2em;
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  margin-top: 20px;
}

.expertise-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
  grid-gap: 15px; /* Space between elements */
  justify-content: center;
  align-items: center;
}

.expertise-item {
  text-align: center;
  padding: 15px;
  border-radius: 8px;
  background-color: #3498db; /* Set a default background color */
  color: #fff;
  cursor: pointer;
  transition: transform 0.3s ease-in-out;
  width: 100%; /* Adjust the width as needed */
}

/* Systems Thinking */
.expertise-item.systems-thinking {
  background-color: #3498db;
}

/* Strategic Planning */
.expertise-item.strategic-planning {
  background-color: #e74c3c;
}

/* Collaboration */
.expertise-item.collaboration {
  background-color: #27ae60;
}

/* Hover Effect */
.expertise-item:hover {
  transform: scale(1.05);
}

/* Testimonials Section Styles */
.testimonials-section {
  padding: 2em;
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  margin-top: 20px;
}

.testimonial-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.testimonial-card {
  width: calc(33.33% - 20px); /* 3 cards per row by default */
  max-width: 400px;
  margin: 10px;
  padding: 10px;
  box-sizing: border-box;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  background-color: #fff;
  transition: transform 0.3s ease-in-out;
  text-align: center;
}

@media (max-width: 1200px) {
  .testimonial-card {
    width: calc(50% - 20px); /* 2 cards per row on medium screens */
  }
}

@media (max-width: 768px) {
  .testimonial-card {
    width: calc(100% - 20px); /* 1 card per row on small screens */
  }
}

.testimonial-card:hover {
  transform: scale(1.05);
}

.testimonial-image {
  width: 100px;
  height: 100px;
  object-fit: cover;
  border-radius: 50%;
  margin: 0 auto 10px;
}

.testimonial-content {
  text-align: center;
}

.testimonial-name {
  font-size: 1.2em;
  margin: 0;
}

.testimonial-title {
  color: #555;
  margin: 0;
}

.testimonial-text {
  margin-top: 10px;
}

.pagination {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
}

.pagination button {
  background-color: #0984e3;
  color: #fff;
  padding: 0.5em 1em;
  margin: 5px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.pagination button:hover {
  background-color: #2d3436;
}

/* Contact Section Styles */
section#contact {
  text-align: center;
  padding: 20px;
}

form#contactForm {
  max-width: 400px;
  margin: 0 auto;
}

form#contactForm h2 {
  margin-bottom: 20px;
  font-size: 24px;
}

.form-row {
  margin-bottom: 20px;
}

form#contactForm label {
  display: block;
  margin-bottom: 8px;
  font-weight: bold;
  text-align: left;
}

form#contactForm input,
form#contactForm textarea {
  width: 100%;
  padding: 10px;
  margin-bottom: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  transition: border-color 0.3s ease;
}

form#contactForm input:focus,
form#contactForm textarea:focus {
  border-color: #0984e3;
}

form#contactForm button {
  background-color: #0984e3;
  color: #fff;
  padding: 12px 24px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

form#contactForm button:hover {
  background-color: #2d3436;
}

